# Tetrix_in_C

./: CMakeLists.txt
src/: Makefile  brickgame_prop
src/brick_game/tetris/: backend.c  backend.h  fsm.c  fsm.h  tetris.c  tetris.h
src/gui/cli/: frontend.c  frontend.h  game_over.txt  new_lvl.txt  pause.txt
src/tests/: tests.c  tests.h
